# sygaldry

./: .gitignore  .pypirc  Makefile  README.rst  environment.yml  pyproject.toml
.github/: CODEOWNERS
docs/source/: api.rst  caching.rst  cli.rst  conf.py  configuration.rst  examples.rst  index.rst  loading.rst  overview.rst  resolver.rst  type-checking.rst
sygaldry/: __init__.py  __main__.py  artificery.py  cache.py  checker.py  cli.py  codegen.py  environment.py  errors.py  loader.py  resolver.py  types.py
tests/: __init__.py  conftest.py  test_artificery.py  test_cache.py  test_checker.py  test_cli.py  test_cli_integration.py  test_codegen.py  test_deep_key_refs.py  test_environment.py  test_errors.py  test_integration.py  test_loader.py  test_resolution_structures.py  test_resolver.py  test_types.py
tests/fixtures/: deep_key_refs.toml  deep_key_refs.yaml
