[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "sygaldry"
authors = [{name = "Rohan B. Dalton", email = "rohan@rohandalton.io"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/RohanDalton/sygaldry"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]
conda-pypi-map = { conda-forge = "conda_pypi_map.json" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyyaml = ">=6.0.3,<7"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-sugar = "*"
pytest-cov = "*"

[tool.pixi.feature.lint.dependencies]
ruff = "*"
ty = "*"

[tool.pixi.feature.docs.dependencies]
sphinx = "*"

[tool.pixi.environments]
dev = ["test", "lint", "docs"]

[tool.ruff]
line-length = 95
indent-width = 4
target-version = "py310"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["B", "C4", "FURB", "I", "PERF", "PL", "S", "SIM", "UP"]
