[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "sygaldry"
authors = [{name = "Rohan B. Dalton", email = "rohan@rohandalton.io"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
description = "Build arbitrary Python objects from YAML or TOML configuration files."
dynamic = ["version"]
readme = "README.rst"
dependencies = [
    "pyyaml>=6.0.3,<7",
    "click>=8.0,<9",
    "rich-click>=1.7,<2",
]

[project.scripts]
sygaldry = "sygaldry.cli:cli"

[project.urls]
Documentation = "https://sygaldry.art"
Home = "https://github.com/RohanDalton/sygaldry"

[tool.coverage.paths]
source = ["sygaldry"]

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
source = ["sygaldry"]

[tool.hatch.version]
path = "sygaldry/__version__.py"

[tool.pytest.ini_options]
addopts = "--cov=sygaldry --cov-branch --cov-report=term-missing --cov-report=html:coverage"
testpaths = "tests"
filterwarnings = [
    "ignore::ResourceWarning",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]
conda-pypi-map = { conda-forge = "conda_pypi_map.json" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyyaml = ">=6.0.3,<7"
click = ">=8.0,<9"
rich-click = ">=1.7,<2"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-sugar = "*"
pytest-cov = "*"

[tool.pixi.feature.lint.dependencies]
ruff = "*"
ty = "*"

[tool.pixi.feature.docs.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"

[tool.pixi.feature.build.dependencies]
hatch = "*"
twine = "*"
grayskull = ">=3.1.0,<4"

[tool.pixi.environments]
dev = ["test", "lint", "docs"]
build = ["build"]

[tool.ruff]
line-length = 95
indent-width = 4
target-version = "py310"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = ["C408"]
select = ["B", "C4", "FURB", "I", "PERF", "PL", "S", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004",
              "S101",
             ]
